--- a/libstack/Makefile
+++ b/libstack/Makefile
@@ -2,7 +2,7 @@ NAME	= libstack.a
 CC		= cc
 CFLAGS	= -Wall -Werror -Wextra
 AR		= ar rcs
-SRC		= ft_stackadd_back.c ft_stackadd_front.c ft_stackclear.c ft_stackdelone.c ft_stackiter.c ft_stacklast.c ft_stackmap.c ft_stacknew.c ft_stacksize.c
+SRC		= ft_stackadd_back.c ft_stackadd_front.c ft_stackclear.c ft_stacklast.c ft_stacknew.c ft_stacksize.c
 OBJ		= $(SRC:.c=.o)
 
 all: $(NAME)
